# Software-Render

./: .gitignore  CMakeLists.txt
src/: frame.cpp  frame.h  main.cpp  objects.cpp  objects.h
src/Maths/: COLOR.cpp  COLOR.h  MATRIX4X4.cpp  MATRIX4X4.h  Mat44.cpp  Mat44.h  Maths.h  PLANE.cpp  PLANE.h  VECTOR4D.h  Vec2.h  Vec3.h  Vec4.cpp  Vec4.h  Vec4I.h  Vec4f.h
src/cube/: cube.cpp  cube.h
src/face/: face.cpp  face.h
src/graphicLib/: graphicLib.cpp  graphicLib.h  sampler.cpp  sampler.h
src/header/: constants.h  datatype.h  header.h
src/key/: key.cpp  key.h
src/shader/: shader.cpp  shader.h
src/shadow/: shadow.cpp  shadow.h
src/sight/: sight.cpp  sight.h
src/sphere/: sphere.cpp  sphere.h
src/square/: square.cpp  square.h
src/texture/: BmpLoader.cpp  BmpLoader.h  texture.cpp  texture.h
src/util/: util.cpp  util.h
